--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@ body {
   height: 100%;
   margin: 0;
   background-image: url('./image/bg2.jpg');
-  background-size: 1300px;
+  background-size: cover;
 }
+
 
