--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,6 +1,5 @@
 .container {
     margin: 0;
-    display: grid;
     color: white;
 }
 
@@ -8,10 +7,17 @@
     display: flex;
     margin: 0;
     width: auto;
-    height: 700px
-    
-    ;
-} 
+    height: 80vh;
+    overflow: auto;
+}
+
+.containerItems {
+    display: flex;
+}
+
+.onlySearch {
+    text-align: left;
+}
 
 .container select {
     background-color: rgba(255, 255, 255, 0.524);
@@ -26,12 +32,13 @@
     margin: auto;
 }
 
-
 .search {
     height: 45px;
     display: flex;
     align-items: center;
     padding: 0px 10px;
+    align-items: center;
+    justify-content: space-between;
 }
 .search span {
     margin-right: 5px;
@@ -45,12 +52,17 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    
 }
 
 .selectSort {
-    display: flex;
-    position: absolute;
-    right: 10px;
+   text-align: left;
+}
+.selectSort label {
+    margin: 0;
+}
+.botonFiltros {
+    display: none;
 }
 
 .filters {
@@ -68,7 +80,41 @@
     letter-spacing: 0.5px;
 }
 
+@media (max-width: 970px) {
+   .containerItems {
+    width: 250px;
+    height: 240px;
+    background-color: rgba(128, 127, 127, 0.84);
+    position: absolute;
+    top: 120px;
+    left: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: start;
+    padding: 10px;
+    text-align: left;
+    border: 1px solid white;
+    border-radius: 5px;
+   }
 
+   .items{
+    display: flex;
+    flex-direction: column;
+    margin: 8px 0px;
+    z-index: 1;
+   }
+
+   .items select{
+    background-color: wheat;
+   }
+
+   .botonFiltros {
+    display: block;
+    position: absolute;
+    
+   }
+}
 
 
 
