--- a/client/src/pages/LandingPage/LandingPage.module.css
+++ b/client/src/pages/LandingPage/LandingPage.module.css
@@ -1,38 +1,84 @@
 .landing {
     display: flex;
+    width: 100vw;
+    flex-direction: column;
     justify-content: center;
     color: white;
+    position: relative;
+}
+
+.contenedor {
+    display: flex;
+   
 }
 
 .title {
     width: 55%;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .title h1 {
-    font-size: 120px;
-    margin: 50px 0px 10px 16%;
+    font-size: 16vh;
+    top: 10px;
+    margin: 10px 0px;
+    
 }
+
 
 .buttonEntrar {
     background-color: transparent;
     border: none;
 }
 
+.buttonEntrar:hover {
+    color: #27262c;
+    animation: spring 300ms ease-out;
+    text-shadow: 0 -1px 0 #ffffff;
+    font-weight: bold;
+  }
+
+  @keyframes spring {
+    15% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1.2, 1.1);
+    }
+    40% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(0.95, 0.95);
+    }
+    75% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1.05, 1);
+    }
+    100% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1, 1);
+    }
+  }
+
 .buttonEntrar a {
-    position: absolute;
-    left: 0;
-    right: 0;
+    width: 20vw;
     top: 800px;
     color: white;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 700;
+}
+
+.contentButton {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title p {
     width: 80%;
     font-size: 30px;
-    margin: 15px 15px 0px 17%;
 }
 
 
@@ -45,7 +91,7 @@
 }
 
 .img {
-    margin-top: 25%;
+    margin-top: 15%;
     width: 80%;
 }
 
@@ -59,25 +105,49 @@
 
 
 
-@media (max-width: 420px) {
-    .landing {
-        background-color: red;
+@media (max-width: 950px) {
+    html {
+        height: 100%;
+    }
+    body{
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .contenedor{
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
+        width: 100vw;
     }
-
+    
     .title {
-        background-color: aquamarine;
-        height: 370px;
+        display: block;
+        order: 2;
+        width: 100vw;
+        height: 55vh;
+        justify-content: none;
     }
 
-    .contentImg {
-        padding-top: 10px;
-        background-color: coral;
-        height: 120px;
+    .title p {
+        margin: 25px auto;
+        width: 90vw;
+    }
+
+    .contentImg{
+        width: 100vw;
     }
 
     .img {
-        width: 30%;
+        width: 30vw;
+        margin-top: 20px;
+    }
+
+    .title h1 {
+        font-size: 70px;
+        margin: 25px 0px;
+
     }
 }
+
+
+
