--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -84,7 +84,7 @@
    .containerItems {
     width: 250px;
     height: 240px;
-    background-color: rgba(128, 127, 127, 0.84);
+    background-color: rgba(67, 67, 67, 0.84);
     position: absolute;
     top: 120px;
     left: 50px;
@@ -94,7 +94,7 @@
     justify-content: start;
     padding: 10px;
     text-align: left;
-    border: 1px solid white;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
    }
 
@@ -102,7 +102,6 @@
     display: flex;
     flex-direction: column;
     margin: 8px 0px;
-    z-index: 1;
    }
 
    .items select{
@@ -112,7 +111,19 @@
    .botonFiltros {
     display: block;
     position: absolute;
-    
+    left: 5px;
+    top: 115px;
+    cursor: pointer;
+   }
+
+   .botonFiltros img:hover {
+    transform: scale(1.1);
+    transition: .5s;
+   }
+
+   .botonFiltros img {
+    width: 40px;
+    height: 40px;
    }
 }
 
