--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -52,7 +52,6 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    
 }
 
 .selectSort {
@@ -91,7 +90,7 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 10px;
     text-align: left;
     border: 1px solid rgb(255, 255, 255);
