--- a/client/src/pages/LandingPage/LandingPage.module.css
+++ b/client/src/pages/LandingPage/LandingPage.module.css
@@ -1,20 +1,28 @@
 .landing {
     display: flex;
     width: 100vw;
+    height: 100vh;
     flex-direction: column;
     justify-content: center;
-    color: white;
+    align-items: center;
+    color: rgb(0, 0, 0);
     position: relative;
+    background: url('../../image/bgPergamino.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 1120px;
 }
 
 .contenedor {
     display: flex;
+    align-items: center;
+    justify-content: center;
    
 }
 
 .title {
-    width: 55%;
-    height: 85vh;
+    width: 45%;
+    height: 573px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,12 +30,13 @@
 }
 
 .title h1 {
-    font-size: 16vh;
+    font-family: cursive;
+    font-style:oblique;
+    font-size: 14vh;
     top: 10px;
     margin: 10px 0px;
-    
+    margin-left: 50px;
 }
-
 
 .buttonEntrar {
     background-color: transparent;
@@ -63,10 +72,12 @@
 .buttonEntrar a {
     width: 20vw;
     top: 800px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 40px;
     font-weight: 700;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 1.5px;
 }
 
 .contentButton {
@@ -79,6 +90,7 @@
 .title p {
     width: 80%;
     font-size: 30px;
+    font-family: cursive;
 }
 
 
@@ -87,12 +99,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 45%;
+    width: 35%;
 }
 
 .img {
     margin-top: 15%;
-    width: 80%;
+    width: 70%;
 }
 
 .sombra {
@@ -101,9 +113,6 @@
     width: 30%;
     height: 15px;
 }
-
-
-
 
 @media (max-width: 950px) {
     html {
@@ -118,13 +127,16 @@
         display: flex;
         flex-direction: column;
         width: 100vw;
+        height: 90vh;
+        align-items: flex-start;
     }
     
     .title {
-        display: block;
+        display: flex;
+        flex-direction: column;
         order: 2;
         width: 100vw;
-        height: 55vh;
+        height: 50vh;
         justify-content: none;
     }
 
@@ -135,6 +147,8 @@
 
     .contentImg{
         width: 100vw;
+        height: 10%;
+        margin-bottom: 30px;
     }
 
     .img {
@@ -145,7 +159,10 @@
     .title h1 {
         font-size: 70px;
         margin: 25px 0px;
-
+    }
+    .contentButton {
+        position: absolute;
+        bottom: 110px;
     }
 }
 
