--- a/client/src/components/CardDetail/CardDetail.module.css
+++ b/client/src/components/CardDetail/CardDetail.module.css
@@ -85,3 +85,23 @@
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.293);
 }
+
+@media (max-width: 800px) {
+
+    .container {
+        height: 680px;
+        overflow: auto;
+    }
+
+    .containerImage {
+        flex-direction: column;
+    }
+
+    .containerDescription {
+        flex-direction: column;
+        align-items: center;
+    }
+    .description {
+        text-align: center;
+    }
+} 
