--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -79,6 +79,12 @@
     letter-spacing: 0.5px;
 }
 
+@media (max-width: 970px){
+    .containerItems {
+        display: none;
+    }
+}
+
 @media (max-width: 970px) {
    .containerItems {
     width: 250px;
@@ -107,23 +113,27 @@
     background-color: wheat;
    }
 
-   .botonFiltros {
-    display: block;
-    position: absolute;
-    left: 5px;
-    top: 115px;
-    cursor: pointer;
-   }
+   
+}
 
-   .botonFiltros img:hover {
-    transform: scale(1.1);
-    transition: .5s;
-   }
-
-   .botonFiltros img {
-    width: 40px;
-    height: 40px;
-   }
+@media (max-width: 1200px) {
+    .botonFiltros {
+        display: block;
+        position: absolute;
+        left: 5px;
+        top: 115px;
+        cursor: pointer;
+       }
+    
+       .botonFiltros img:hover {
+        transform: scale(1.1);
+        transition: .5s;
+       }
+    
+       .botonFiltros img {
+        width: 40px;
+        height: 40px;
+       }
 }
 
 
