--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
 body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  background-image: url('./image/bg2.jpg');
-  background-size: cover;
+  background-image: url(./image/worldgoble.jpg);
+  background-size: 100% 100vh;
+
 }
-
-
