--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,6 +1,7 @@
 .container {
     margin: 0;
     color: white;
+
 }
 
 .bodyContainer {
@@ -101,6 +102,7 @@
     text-align: left;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
+    z-index: 2;
    }
 
    .items{
