--- a/client/src/components/CardsFlag/CardFlag.module.css
+++ b/client/src/components/CardsFlag/CardFlag.module.css
@@ -32,27 +32,13 @@
     font-weight: 300;
     background-color: white;
     position: absolute;
-    bottom: 5px;
-    animation: detail 1.3s ease-out;
+    bottom: 0px;
+    animation: detail 2.2s ease-out;
     color: black;
     position: relative;
+    z-index: 0;
 }
-.textDescription::before {
-    width: 30px;
-    height: 30px;
-    background-color: red;
-    position: absolute;
-    z-index: 1;
-    top: -1px;
-}
-.textDescription::after {
-    width: 30px;
-    height: 30px;
-    background-color: red;
-    position: absolute;
-    z-index: 1;
-    top: -1px;
-}
+
 
 @keyframes detail {
     0%{
@@ -66,7 +52,7 @@
     }
     100%{
         opacity: 100%;
-        bottom: 5px;
+        bottom: 0px;
     }
 }
 
@@ -85,6 +71,17 @@
     font-size: 15px;
     background-color: rgb(169, 169, 169);
     letter-spacing: 0.2px;
+}
+
+.square {
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 50%;
+    transform: rotate(45deg) translate(-50%);
+    z-index: -1;
+    top: 8px;
 }
 
 .button:hover {
